# monachan-rs

./: README.md
crates/core/: Cargo.toml  build.rs
crates/core/cpp/: extern.cpp
crates/core/executor/: Cargo.toml
crates/core/executor/src/: estimator.rs  executor.rs  hook.rs  instruction.rs  opcode.rs  profiler.rs  program.rs  state.rs  subproof.rs
crates/core/include/: alu_base.hpp  alu_ext.hpp  batch_fri.hpp  exp_reverse_bits.hpp  fri_fold.hpp  poseidon2.hpp  poseidon2_constants.hpp  poseidon2_skinny.hpp  poseidon2_wide.hpp  prelude.hpp  public_values.hpp  select.hpp  sys.hpp
crates/core/machine/: Cargo.toml  build.rs  empty.cpp
crates/core/machine/cpp/: extern.cpp
crates/core/machine/include/: add_sub.hpp  bb31_septic_extension_t.hpp  bb31_t.hpp  bitwise.hpp  cpu.hpp  lt.hpp  memory.hpp  memory_global.hpp  memory_local.hpp  mul.hpp  prelude.hpp  sll.hpp  sr.hpp  sys.hpp  syscall.hpp  utils.hpp
crates/core/machine/src/: io.rs  lib.rs  sys.rs
crates/core/src/: builder.rs  lib.rs
crates/core/src/air/: block.rs  builder.rs  extension.rs  instruction.rs  is_ext_zero.rs  is_zero.rs  memory.rs  mod.rs  multi_builder.rs  opcode.rs  public_values.rs  range_check.rs
crates/core/src/chips/: alu_base.rs  alu_ext.rs  batch_fri.rs  exp_reverse_bits.rs  fri_fold.rs  mod.rs  public_values.rs  select.rs
crates/cuda/: Cargo.toml  build.rs
crates/cuda/proto/: api.proto
crates/cuda/src/: lib.rs
crates/cuda/src/proto/: api.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/scripts/: circuit_architecture_sweep.rs
crates/recursion/circuit/src/: challenger.rs  constraints.rs  domain.rs  fri.rs  hash.rs  lib.rs  merkle_tree.rs  stark.rs  types.rs  utils.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: artifacts.rs  client.rs  install.rs  lib.rs  proof.rs  prover.rs  utils.rs
crates/sdk/src/cpu/: builder.rs  execute.rs  mod.rs  prove.rs
crates/sdk/src/cuda/: builder.rs  mod.rs  prove.rs
crates/sdk/src/env/: mod.rs  prove.rs
crates/sdk/src/network/: builder.rs  client.rs  error.rs  grpc.rs  mod.rs  prove.rs  prover.rs  retry.rs  signer.rs  utils.rs  validation.rs
crates/test-artifacts/: Cargo.toml  Makefile  build.rs
crates/test-artifacts/programs/: Cargo.toml  Makefile
crates/test-artifacts/programs/bls12381-add/: Cargo.toml
crates/test-artifacts/programs/bls12381-decompress/: Cargo.toml
crates/test-artifacts/programs/bls12381-double/: Cargo.toml
crates/test-artifacts/programs/bls12381-fp/: Cargo.toml
crates/test-artifacts/programs/bls12381-fp2-addsub/: Cargo.toml
crates/test-artifacts/programs/bls12381-fp2-mul/: Cargo.toml
crates/test-artifacts/programs/bls12381-mul/: Cargo.toml
crates/test-artifacts/programs/bn254-add/: Cargo.toml
crates/test-artifacts/programs/bn254-double/: Cargo.toml
crates/test-artifacts/programs/bn254-fp/: Cargo.toml
crates/test-artifacts/programs/bn254-fp2-addsub/: Cargo.toml
crates/test-artifacts/programs/bn254-fp2-mul/: Cargo.toml
crates/test-artifacts/programs/bn254-mul/: Cargo.toml
crates/test-artifacts/programs/common/: Cargo.toml
crates/test-artifacts/programs/cycle-tracker/: Cargo.toml
crates/test-artifacts/programs/ed-add/: Cargo.toml
crates/test-artifacts/programs/ed-decompress/: Cargo.toml
crates/test-artifacts/programs/ed25519/: Cargo.toml
crates/test-artifacts/programs/fibonacci/: Cargo.toml
crates/test-artifacts/programs/fibonacci-blake3/: Cargo.toml
crates/test-artifacts/programs/hello-world/: Cargo.toml
crates/test-artifacts/programs/hint-io/: Cargo.toml
crates/test-artifacts/programs/keccak-permute/: Cargo.toml
crates/test-artifacts/programs/keccak256/: Cargo.toml
crates/test-artifacts/programs/panic/: Cargo.toml
crates/test-artifacts/programs/rand/: Cargo.toml
crates/test-artifacts/programs/secp256k1-add/: Cargo.toml
crates/test-artifacts/programs/secp256k1-decompress/: Cargo.toml
crates/test-artifacts/programs/secp256k1-double/: Cargo.toml
crates/test-artifacts/programs/secp256k1-mul/: Cargo.toml
crates/test-artifacts/programs/secp256r1-add/: Cargo.toml
crates/test-artifacts/programs/secp256r1-decompress/: Cargo.toml
crates/test-artifacts/programs/secp256r1-double/: Cargo.toml
crates/test-artifacts/programs/sha-compress/: Cargo.toml
crates/test-artifacts/programs/sha-extend/: Cargo.toml
crates/test-artifacts/programs/sha2/: Cargo.toml
crates/test-artifacts/programs/ssz-withdrawals/: Cargo.toml
crates/test-artifacts/programs/tendermint-benchmark/: Cargo.toml
crates/test-artifacts/programs/u256x2048-mul/: Cargo.toml
crates/test-artifacts/programs/uint256-arith/: Cargo.toml
crates/test-artifacts/programs/uint256-mul/: Cargo.toml
crates/test-artifacts/src/: lib.rs
examples/: Cargo.toml  testing-suite-gen.sh
examples/aggregation/program/: Cargo.toml
examples/aggregation/script/: Cargo.toml  build.rs
examples/bls12381/program/: Cargo.toml
examples/bls12381/script/: Cargo.toml
examples/bls12381/script/src/: main.rs
examples/bn254/program/: Cargo.toml
examples/bn254/script/: Cargo.toml
examples/chess/program/: Cargo.toml
examples/chess/script/: Cargo.toml
examples/cycle-tracking/program/: Cargo.toml
examples/cycle-tracking/script/: Cargo.toml
examples/fibonacci/program/: Cargo.toml
examples/fibonacci/script/: Cargo.toml
examples/groth16/program/: Cargo.toml
examples/groth16/script/: Cargo.toml
examples/io/program/: Cargo.toml
examples/io/script/: Cargo.toml
examples/is-prime/program/: Cargo.toml
examples/is-prime/script/: Cargo.toml
examples/json/lib/: Cargo.toml
examples/json/program/: Cargo.toml
examples/json/script/: Cargo.toml
examples/regex/program/: Cargo.toml
examples/regex/script/: Cargo.toml
examples/rsa/program/: Cargo.toml
examples/rsa/script/: Cargo.toml  build.rs
examples/ssz-withdrawals/program/: Cargo.toml
examples/ssz-withdrawals/script/: Cargo.toml
examples/tendermint/program/: Cargo.toml
examples/tendermint/script/: Cargo.toml
(+361 files in other folders)
