[package]
name = "monerochan-recursion-core"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
links = "monerochan-recursion-core-sys"

[dependencies]
p3-field = { workspace = true }
p3-util = { workspace = true }
p3-baby-bear = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
monerochan-derive = { workspace = true }
monerochan-primitives = { workspace = true }
tracing = { workspace = true }
monerochan-core-machine = { workspace = true, default-features = false }
monerochan-stark = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-challenger = { workspace = true }
p3-fri = { workspace = true }
zkhash = "0.2.0"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
serde = { workspace = true, features = ["derive", "rc"] }
backtrace = { version = "0.3.71", features = ["serde"] }
static_assertions = "1.1.0"
thiserror = "1.0.60"
vec_map = "0.8.2"
range-set-blaze = { version = "0.1.16", optional = true }
smallvec = { version = "1.13.2", features = [
    "const_generics",
    "const_new",
    "serde",
    "union",
    "write",
], optional = true }
num_cpus = "1.16.0"
rand = "0.8.5"
cfg-if = "1.0.0"

[dev-dependencies]
range-set-blaze = { version = "0.1.16" }
smallvec = { version = "1.13.2", features = [
    "const_generics",
    "const_new",
    "serde",
    "union",
    "write",
] }

[build-dependencies]
monerochan-stark = { workspace = true }
monerochan-primitives = { workspace = true }
p3-baby-bear = { workspace = true }
cbindgen = "0.27.0"
cc = "1.1"
pathdiff = "0.2.1"
glob = "0.3.1"

[features]
default = ["sys"]
debug = []
sys = ["monerochan-core-machine/sys"]
program_validation = ["dep:range-set-blaze", "dep:smallvec"]

[lints]
workspace = true
