[package]
name = "monerochan-cuda"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
monerochan-core-machine = { workspace = true, default-features = true }
monerochan-prover = { workspace = true }
prost = "0.13"
bincode = "1.3.3"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "^1.44.2", features = ["full"] }
tracing = { workspace = true }
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }
ctrlc = "3.4.4"

[build-dependencies]
prost-build = { version = "0.13", optional = true }
twirp-build = { package = "twirp-build-rs", version = "0.13.0-succinct", optional = true }

[dev-dependencies]
monerochan-core-machine = { path = "../core/machine" }
test-artifacts = { path = "../test-artifacts" }

[features]
default = []
protobuf = ["dep:prost-build", "dep:twirp-build"]

[lints]
workspace = true
