[package]
name = "monerochan-derive"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lints]
workspace = true
