[package]
name = "monerochan"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = { version = "0.13", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
twirp = { package = "twirp-rs", version = "0.13.0-succinct", optional = true }
async-trait = "0.1.81"
reqwest-middleware = { version = "0.3.2", optional = true }
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "trust-dns",
  "stream",
  "json",
], optional = true }
anyhow = "1.0.83"
monerochan-prover = { workspace = true }
monerochan-core-machine = { workspace = true, default-features = true }
monerochan-cuda = { workspace = true }
monerochan-build = { workspace = true }
futures = "0.3.30"
bincode = "1.3.3"
tokio = { version = "1.44.2", features = ["full"], optional = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-fri = { workspace = true }
indicatif = "0.17.8"
tracing = { workspace = true }
hex = "0.4.3"
dirs = "5.0.1"
tempfile = "3.10.1"
cfg-if = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
aws-sdk-kms = { version = "1.77.0", optional = true }
aws-config = { version = "1.5.3", optional = true }
rustls = { version = "0.23.27", features = ["ring"] }
hashbrown = { workspace = true }
monerochan-core-executor = { workspace = true }
monerochan-stark = { workspace = true }
monerochan-primitives = { workspace = true }
itertools = { workspace = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"], optional = true }
alloy-signer = { version = "1.0", default-features = false, optional = true }
alloy-signer-aws = { version = "1.0", default-features = false, optional = true }
alloy-signer-local = { version = "1.0", default-features = false, optional = true }
alloy-sol-types = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0", default-features = false, optional = true, features = [
  "k256",
  "serde",
] }
backoff = { version = "0.4", features = ["tokio"], optional = true }
sysinfo = "0.30.13"

# TEE Dependencies
k256 = { version = "0.13.3", features = ["serde"] } # Signing
eventsource-stream = { version = "0.2.0" }          # SSE Extenstion for reqwest

[dev-dependencies]
test-artifacts = { path = "../test-artifacts" }
tokio-test = { version = "0.4" }

[features]
default = ["network", "reserved-capacity"]
native-gnark = ["monerochan-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less
# dependency resolution issues.
network = [
  "dep:prost",
  "dep:alloy-signer",
  "dep:alloy-signer-aws",
  "dep:alloy-signer-local",
  "dep:alloy-primitives",
  "dep:tokio",
  "dep:reqwest",
  "dep:twirp",
  "dep:reqwest-middleware",
  "dep:tonic",
  "dep:backoff",
  "dep:aws-sdk-kms",
  "dep:aws-config",
]
tee-2fa = []
reserved-capacity = ["network"]
cuda = []
bigint-rug = ["monerochan-core-machine/bigint-rug"]

profiling = ["monerochan-core-executor/profiling"]

[lints]
workspace = true
