[package]
name = "test-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
monerochan-build = { workspace = true }

[build-dependencies]
monerochan-build = { workspace = true }