[package]
name = "json-script"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
serde_json = { workspace = true }
monerochan = { workspace = true }
lib = { path = "../lib", package = "json-lib" }

[build-dependencies]
monerochan-build = { workspace = true }
