[package]
name = "rsa-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../crates/zkvm/entrypoint" }
rsa = "0.9.6"                                   # Check for the latest version
sha2 = {version =  "0.10.8",package = "sha2", features = ["oid"]}                                   # Check for the latest version
