[package]
name = "bls12381-add-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
common-test-utils = { path = "../common" }
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-lib = { path = "../../../../crates/zkvm/lib" }
monerochan-curves = { path = "../../../../crates/curves" }
