[package]
name = "bls12381-mul-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-lib = { path = "../../../../crates/zkvm/lib" }
monerochan-derive = { path = "../../../../crates/derive" }
