[package]
name = "keccak256-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }
