[package]
name = "secp256k1-add-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-lib = { path = "../../../../crates/zkvm/lib" }
monerochan-curves = { path = "../../../../crates/curves" }
common-test-utils = { path = "../common" }
