[package]
name = "secp256r1-double-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-lib = { path = "../../../../crates/zkvm/lib" }
monerochan-curves = { path = "../../../../crates/curves" }
common-test-utils = { path = "../common" }
hex-literal = "0.4.1"
num = { version = "0.4.1", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
elliptic-curve = { version = "=0.13.8", default-features = false, features = ["sec1"] }