[package]
name = "u256x2048-mul"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-derive = { path = "../../../../crates/derive" }
num-bigint = { workspace = true }
num = { version = "0.4.1" }
rand = "0.8.5"
bytemuck = "1.15.0"
