[package]
name = "biguint-mul-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8"
num = { version = "0.4.1" }
monerochan-runtime = { path = "../../../../crates/zkvm/entrypoint" }
monerochan-derive = { path = "../../../../crates/derive" }
bytemuck = "1.15.0"
